--- a/translations/nl.json
+++ b/translations/nl.json
@@ -1,9 +1,4 @@
 {
-    "latinTitle": "Latijn",
-    "latinVerbs": "Werkwoorden",
-    "latinNouns": "Naamwoorden",
-    "greekTitle": "Grieks",
-    "greekVerbs": "Werkwoorden",
-    "greekNouns": "Lidwoorden en naamwoorden"
-  }
+    "NoQuestionsFound":  "Geen vragen gevonden. Maak ruimere selectie in het menu."
+}
   
