--- a/translations/nl.json
+++ b/translations/nl.json
@@ -1,4 +1,6 @@
 {
-    "NoQuestionsFound":  "Geen vragen gevonden. Maak ruimere selectie in het menu."
-}
-  
+    "NoQuestionsFound":  "Geen vragen gevonden. Maak ruimere selectie in het menu.",
+    "SeeResults": "Dit was de laatste vraag. Bekijk resultaat",
+    "FormsSelected" : "formen geselecteerd",
+    "scoreMessage": "Je hebt {0} van de {1} goed"
+}  
