Added Latin Pronouns Support

--- a/translations/en.json
+++ b/translations/en.json
@@ -8,6 +8,7 @@
     "Filters": "Filters",
     "Nouns": "Nouns",
     "Adjectives": "Adjectives",
+    "Pronouns" : "Pronouns",
     "Case": "Case",
     "Number": "Number",
     "Singular": "sg",
