Added Pronounce Greek, 1/2nd person disabled buttons, clickable headers for some headers for toggling all checkboxes.

--- a/translations/en.json
+++ b/translations/en.json
@@ -14,6 +14,7 @@
     "Singular": "sg",
     "Plural": "pl",
     "lidwoord": "Article",
+    "1e/2e persoon": "1st/2nd person",
     "NoQuestionsFound": "No questions found. Make a wider selection in the menu.",
     "Verb": "Verb",
     "Mood": "Mood",
